--- a/resto-francaise.html
+++ b/resto-francaise.html
@@ -11,7 +11,10 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <header>
+    <header class="header-menu">
+      <div class="arrow">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+      </div>
       <div class="logo">
         <a href="index.html">
           <img src="dart-sass/sass/images/logo/ohmyfood.png" alt="logo" />
