--- a/resto-francaise.html
+++ b/resto-francaise.html
@@ -21,5 +21,13 @@
         </a>
       </div>
     </header>
+    <main>
+      <div class="image_restaurant">
+        <img
+          src="dart-sass/sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+          alt="francaise"
+        />
+      </div>
+    </main>
   </body>
 </html>
