--- a/index.html
+++ b/index.html
@@ -80,16 +80,19 @@
                 src="dart-sass/sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="restaurant"
               />
-              <p class="nouveau">Nouveau</p>
               <div class="description">
                 <div class="description_titre">
                   <h3>La palette du goût</h3>
                   <p>Ménilmontant</p>
                 </div>
                 <div class="description_icone">
-                  <i class="fa-solid fa-heart"></i>
+                  <i
+                    class="fa-solid fa-heart description_icone--full"
+                    aria-hidden="true"
+                  ></i>
                 </div>
               </div>
+              <p class="nouveau">Nouveau</p>
             </a>
           </article>
           <article class="card_restaurant">
@@ -98,12 +101,16 @@
                 src="dart-sass/sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="restaurant"
               />
-              <p class="nouveau">Nouveau</p>
               <div class="description">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-                <i class="fa-solid fa-heart"></i>
+                <div class="description_titre">
+                  <h3>La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
+                <div class="description_icone">
+                  <i class="fa-regular fa-heart"></i>
+                </div>
               </div>
+              <p class="nouveau">Nouveau</p>
             </a>
           </article>
           <article class="card_restaurant">
@@ -113,9 +120,13 @@
                 alt="restaurant"
               />
               <div class="description">
-                <h3>A' la française</h3>
-                <p>Cité Rouge</p>
-                <i class="fa-solid fa-heart"></i>
+                <div class="description-titre">
+                  <h3>À la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <div class="description_icone">
+                  <i class="fa-regular fa-heart"></i>
+                </div>
               </div>
             </a>
           </article>
@@ -126,9 +137,13 @@
                 alt="restaurant"
               />
               <div class="description">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
-                <i class="fa-solid fa-heart"></i>
+                <div class="description_titre">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <div class="description_icone">
+                  <i class="fa-regular fa-heart"></i>
+                </div>
               </div>
             </a>
           </article>
