--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                 </div>
                 <div class="description_icone">
                   <i
+                    class="fa-regular fa-heart description_icone--empty"
+                    aria-hidden="true"
+                  ></i>
+                  <i
                     class="fa-solid fa-heart description_icone--full"
                     aria-hidden="true"
                   ></i>
@@ -107,7 +111,10 @@
                   <p>Charonne</p>
                 </div>
                 <div class="description_icone">
-                  <i class="fa-regular fa-heart"></i>
+                  <i
+                    class="fa-solid fa-heart description_icone--full"
+                    aria-hidden="true"
+                  ></i>
                 </div>
               </div>
               <p class="nouveau">Nouveau</p>
@@ -125,7 +132,10 @@
                   <p>Cité Rouge</p>
                 </div>
                 <div class="description_icone">
-                  <i class="fa-regular fa-heart"></i>
+                  <i
+                    class="fa-solid fa-heart description_icone--full"
+                    aria-hidden="true"
+                  ></i>
                 </div>
               </div>
             </a>
@@ -142,7 +152,10 @@
                   <p>Folie-Méricourt</p>
                 </div>
                 <div class="description_icone">
-                  <i class="fa-regular fa-heart"></i>
+                  <i
+                    class="fa-solid fa-heart description_icone--full"
+                    aria-hidden="true"
+                  ></i>
                 </div>
               </div>
             </a>
