Modifications remplissage coeur

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>Restaurants</h2>
         <div class="box_restaurant">
           <article class="card_restaurant">
-            <a href="#">
+            <a href="./resto-gout.html">
               <img
                 src="dart-sass/sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="restaurant"
@@ -112,6 +112,10 @@
                 </div>
                 <div class="description_icone">
                   <i
+                    class="fa-regular fa-heart description_icone--empty"
+                    aria-hidden="true"
+                  ></i>
+                  <i
                     class="fa-solid fa-heart description_icone--full"
                     aria-hidden="true"
                   ></i>
@@ -133,6 +137,10 @@
                 </div>
                 <div class="description_icone">
                   <i
+                    class="fa-regular fa-heart description_icone--empty"
+                    aria-hidden="true"
+                  ></i>
+                  <i
                     class="fa-solid fa-heart description_icone--full"
                     aria-hidden="true"
                   ></i>
@@ -152,6 +160,10 @@
                   <p>Folie-Méricourt</p>
                 </div>
                 <div class="description_icone">
+                  <i
+                    class="fa-regular fa-heart description_icone--empty"
+                    aria-hidden="true"
+                  ></i>
                   <i
                     class="fa-solid fa-heart description_icone--full"
                     aria-hidden="true"
