--- a/resto-note.html
+++ b/resto-note.html
@@ -28,6 +28,86 @@
           alt="francaise"
         />
       </div>
+      <section class="resto">
+        <div class="resto_titre">
+          <h3 class="resto_titre_nom">La palette du goût</h3>
+          <div class="resto_titre_icone">
+            <i
+              class="fa-regular fa-heart description_icone--empty"
+              aria-hidden="true"
+            ></i>
+            <i
+              class="fa-solid fa-heart description_icone--full"
+              aria-hidden="true"
+            ></i>
+          </div>
+        </div>
+        <article class="box_menu">
+          <div class="resto_menu">
+            <div class="resto_menu_titre">
+              <h4>Entrées</h4>
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h5>Fricassée d'escargot</h5>
+                  <p>Au piment d'Espelette</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p class="prix">25€</p>
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+                <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h5>Foie gras de canard mi-cuit</h5>
+                  <p>Et ses copeaux de truffe noire</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p class="prix">35€</p>
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+                <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h5>Oeuf au plat</h5>
+                  <p>Assaisonné à la truffe sur lit de caviar</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p class="prix">20€</p>
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="resto_menu">
+            <div class="resto_menu_titre">
+              <h4>Plats</h4>
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h5></h5>
+                  <p></p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p class="prix"></p>
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="resto_menu">
+            <div class="resto_menu_titre">
+              <h4>Entrées</h4>
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h5></h5>
+                  <p></p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p class="prix"></p>
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
