--- a/resto-delice.html
+++ b/resto-delice.html
@@ -21,5 +21,167 @@
         </a>
       </div>
     </header>
+    <main>
+      <div class="image_restaurant">
+        <img
+          src="dart-sass/sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          alt="francaise"
+        />
+      </div>
+      <section class="resto">
+        <div class="resto_titre">
+          <h2 class="resto_titre_nom">Le délice des sens</h2>
+          <div class="resto_titre_icone">
+            <i
+              class="fa-regular fa-heart resto_titre_icone--empty"
+              aria-hidden="true"
+            ></i>
+            <i
+              class="fa-solid fa-heart resto_titre_icone--full"
+              aria-hidden="true"
+            ></i>
+          </div>
+        </div>
+        <article class="resto_menu">
+          <h3>Entrées</h3>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Tartare de thon</h4>
+                <p>Assaisonné au yuzu</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>25€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Bouchée de homard croustillant</h4>
+                <p>Et sa farandole de petits légumes</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>35€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Velouté de cèpes</h4>
+                <p>Aux truffes</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>20€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Plats</h3>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Poulet rôti aux herbes de Provence</h4>
+                  <p>Et sa crème de truffe</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>40€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Langouste rôtie</h4>
+                  <p>Et ses légumes de saison</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>35€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Côte de boeuf Angus</h4>
+                  <p>Et sa purée de panais</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>44€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Desserts</h3>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Farandole de desserts</h4>
+                  <p>Du chef</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>18€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Crème brulée</h4>
+                  <p>Revisitée</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>22€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Tiramisu</h4>
+                  <p>À la noisette</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>23€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
