--- a/resto-francaise.html
+++ b/resto-francaise.html
@@ -21,5 +21,167 @@
         </a>
       </div>
     </header>
+    <main>
+      <div class="image_restaurant">
+        <img
+          src="dart-sass/sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+          alt="francaise"
+        />
+      </div>
+      <section class="resto">
+        <div class="resto_titre">
+          <h2 class="resto_titre_nom">À la française</h2>
+          <div class="resto_titre_icone">
+            <i
+              class="fa-regular fa-heart resto_titre_icone--empty"
+              aria-hidden="true"
+            ></i>
+            <i
+              class="fa-solid fa-heart resto_titre_icone--full"
+              aria-hidden="true"
+            ></i>
+          </div>
+        </div>
+        <article class="resto_menu">
+          <h3>Entrées</h3>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Tartare de poulpe acidulé</h4>
+                <p>Aux zestes d'orange</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>25€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Velouté de légumes d'antan</h4>
+                <p>Carotte, panais, topinambour</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>35€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Soupe à l'oignon</h4>
+                <p>Revisitée</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>20€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Plats</h3>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Coquilles Saint-Jacques</h4>
+                  <p>Accompagnées d'une purée de panais</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>40€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Magret de canard</h4>
+                  <p>Et parmentier de pommes de terre</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>35€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                  <p>Sur son lit de gnocchis aux légumes</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>44€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Desserts</h3>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Pétales de violettes glacés</h4>
+                  <p>Et purée de noisettes</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>18€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Fondant au chocolat</h4>
+                  <p>Revisité</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>22€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Millefeuille croustillant</h4>
+                  <p>Myrtilles et pâte d’amande</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>23€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
