--- a/resto-gout.html
+++ b/resto-gout.html
@@ -21,5 +21,167 @@
         </a>
       </div>
     </header>
+    <main>
+      <div class="image_restaurant">
+        <img
+          src="dart-sass/sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          alt="francaise"
+        />
+      </div>
+      <section class="resto">
+        <div class="resto_titre">
+          <h2 class="resto_titre_nom">La palette du goût</h2>
+          <div class="resto_titre_icone">
+            <i
+              class="fa-regular fa-heart resto_titre_icone--empty"
+              aria-hidden="true"
+            ></i>
+            <i
+              class="fa-solid fa-heart resto_titre_icone--full"
+              aria-hidden="true"
+            ></i>
+          </div>
+        </div>
+        <article class="resto_menu">
+          <h3>Entrées</h3>
+          <a href="">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Fricassée d'escargot</h4>
+                <p>Au piment d'Espelette</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>25€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Foie gras de canard mi-cuit</h4>
+                <p>Et ses copeaux de truffe noire</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>35€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Oeuf au plat</h4>
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>20€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Plats</h3>
+            <a href="">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Filet de boeuf aux herbes</h4>
+                  <p>Accompagné de sa ribambelle de légumes</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>40€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Parmentier de queue de boeuf</h4>
+                  <p>À la truffe noire sur sa purée de panais</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>35€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Filet de turbot</h4>
+                  <p>Aux agrumes</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>44€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Desserts</h3>
+            <a href="">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Paris-Brest</h4>
+                  <p>Revisité</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>18€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Macaron au chocolat d'exception</h4>
+                  <p>Et glace à la vanille de Madagascar</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>22€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Mousse au chocolat</h4>
+                  <p>Au piment d'Espelette et à la truffe noire</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>23€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
