--- a/resto-note.html
+++ b/resto-note.html
@@ -21,5 +21,181 @@
         </a>
       </div>
     </header>
+    <main>
+      <div class="image_restaurant">
+        <img
+          src="dart-sass/sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+          alt="francaise"
+        />
+      </div>
+      <section class="resto">
+        <div class="resto_titre">
+          <h2 class="resto_titre_nom">La note enchantée</h2>
+          <div class="resto_titre_icone">
+            <i
+              class="fa-regular fa-heart resto_titre_icone--empty"
+              aria-hidden="true"
+            ></i>
+            <i
+              class="fa-solid fa-heart resto_titre_icone--full"
+              aria-hidden="true"
+            ></i>
+          </div>
+        </div>
+        <article class="resto_menu">
+          <h3>Entrées</h3>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Ravioles de foie gras</h4>
+                <p>Accompagnés de leur crème à la truffe</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>25€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Caviar osciètre</h4>
+                <p>Sur blini à la farine de blé noir</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>35€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Homard et espuma de potiron</h4>
+                <p>Mariné aux zestes d'orange</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>20€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div class="resto_menu_choix">
+              <div class="resto_menu_choix--nom">
+                <h4>Foie gras de canard cuit entier</h4>
+                <p>Confiture de figue et pain toasté</p>
+              </div>
+              <div class="resto_menu_choix--prix">
+                <p>35€</p>
+                <div class="resto_menu_choix--icone">
+                  <i class="fa-regular fa-circle-check"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Plats</h3>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Noix de coquilles Saint-Jacques</h4>
+                  <p>Sur lit de purée de céleri-rave</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>40€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Langoustine poêlée</h4>
+                  <p>Purée de patate douce</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>35€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Mijoté de queue de boeuf</h4>
+                  <p>Et riz sauvage aux zestes de citron</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>44€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+        <article class="resto_menu">
+          <div class="resto_menu_titre">
+            <h3>Desserts</h3>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Macaron noisette et chocolat</h4>
+                  <p>Glace au caramel brun et sel de Guérande</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>18€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Baba au rhum revisité</h4>
+                  <p>Avec son coulis de citron</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>22€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="resto_menu_choix">
+                <div class="resto_menu_choix--nom">
+                  <h4>Tarte au citron meringuée</h4>
+                  <p>Déstructurée</p>
+                </div>
+                <div class="resto_menu_choix--prix">
+                  <p>23€</p>
+                  <div class="resto_menu_choix--icone">
+                    <i class="fa-regular fa-circle-check"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
