Ajout section footer page accueil

--- a/index.html
+++ b/index.html
@@ -177,5 +177,28 @@
         </div>
       </section>
     </main>
+    <footer>
+      <section class="footer">
+        <a href="">
+          <h3>ohmyfood</h3>
+        </a>
+        <div class="box_footer">
+          <a href="">
+            <i class="fa-solid fa-utensils"></i>
+            <p>Proposer un restaurant</p>
+          </a>
+          <a href="">
+            <i class="fa-solid fa-handshake-angle"></i>
+            <p>Devenir partenaire</p>
+          </a>
+          <a href="">
+            <p>Mentions légales</p>
+          </a>
+          <a href="">
+            <p>Contact</p>
+          </a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
