Modifications footer toutes les pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!--Header-->
     <header>
-      <div class="logo">
+      <div id="logo">
         <a href="index.html">
           <img src="dart-sass/sass/images/logo/ohmyfood.png" alt="logo" />
         </a>
@@ -178,27 +178,29 @@
       </section>
     </main>
     <footer>
-      <section class="footer">
-        <a href="">
-          <h3>ohmyfood</h3>
-        </a>
-        <div class="box_footer">
-          <a href="">
-            <i class="fa-solid fa-utensils"></i>
-            <p>Proposer un restaurant</p>
-          </a>
-          <a href="">
-            <i class="fa-solid fa-handshake-angle"></i>
-            <p>Devenir partenaire</p>
-          </a>
-          <a href="">
-            <p>Mentions légales</p>
-          </a>
-          <a href="">
-            <p>Contact</p>
-          </a>
-        </div>
-      </section>
+      <a href="#logo">
+        <h3>ohmyfood</h3>
+      </a>
+      <div class="box_footer">
+        <ul>
+          <li>
+            <a href=""
+              ><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a
+            >
+          </li>
+          <li>
+            <a href=""> Mentions légales </a>
+          </li>
+          <li>
+            <a href="mailto: ohmyfood@paris.fr"> Contact </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
