--- a/resto-delice.html
+++ b/resto-delice.html
@@ -15,7 +15,7 @@
       <div class="arrow">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
       </div>
-      <div class="logo">
+      <div id="logo">
         <a href="index.html">
           <img src="dart-sass/sass/images/logo/ohmyfood.png" alt="logo" />
         </a>
@@ -183,5 +183,30 @@
         </article>
       </section>
     </main>
+    <footer>
+      <a href="index.html">
+        <h3>ohmyfood</h3>
+      </a>
+      <div class="box_footer">
+        <ul>
+          <li>
+            <a href=""
+              ><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a
+            >
+          </li>
+          <li>
+            <a href=""> Mentions légales </a>
+          </li>
+          <li>
+            <a href="mailto: ohmyfood@paris.fr"> Contact </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
