--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </form>
       </div>
       <div class="box_intro">
-        <!--Titre + Boutton-->
+        <!--Titre + Bouton-->
         <section class="recherche_restaurant">
           <h1>Réservez le menu qui vous convient</h1>
           <p>
