Ajout animation loader

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <!--Loader-->
+    <div class="loader">
+      <p class="oh">oh</p>
+      <p class="my">my</p>
+      <p class="food">food</p>
+      <p class="point">!</p>
+    </div>
     <!--Header-->
     <header>
       <div id="logo">
