Ajout et modifications animation barre glissante

--- a/resto-note.html
+++ b/resto-note.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>ohmyfood!</title>
     <script
@@ -197,7 +197,7 @@
             <a href=""> Mentions légales </a>
           </li>
           <li>
-            <a href="mailto: ohmyfood@paris.fr"> Contact </a>
+            <a href="mailto:ohmyfood@paris.fr"> Contact </a>
           </li>
         </ul>
       </div>
