--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>ohmyfood!</title>
     <script
@@ -80,6 +80,7 @@
           </div>
         </section>
       </div>
+      <!--Cards Restaurants-->
       <section id="restaurants">
         <h2>Restaurants</h2>
         <div class="box_restaurant">
@@ -184,6 +185,7 @@
         </div>
       </section>
     </main>
+    <!--Footer-->
     <footer>
       <a href="#logo">
         <h3>ohmyfood</h3>
@@ -204,7 +206,7 @@
             <a href=""> Mentions légales </a>
           </li>
           <li>
-            <a href="mailto: ohmyfood@paris.fr"> Contact </a>
+            <a href="mailto:ohmyfood@paris.fr"> Contact </a>
           </li>
         </ul>
       </div>
