--- a/resto-note.html
+++ b/resto-note.html
@@ -176,6 +176,11 @@
           </div>
         </article>
       </section>
+      <div class="commander">
+        <a href="index.html">
+          <button class="btn" type="submit">Commander</button>
+        </a>
+      </div>
     </main>
     <footer>
       <a href="index.html">
