--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                   ></i>
                 </div>
               </div>
-              <p class="nouveau">Nouveau</p>
             </a>
+            <p class="nouveau">Nouveau</p>
           </article>
           <article class="card_restaurant">
-            <a href="/resto-note.html">
+            <a href="./resto-note.html">
               <img
                 src="dart-sass/sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="restaurant"
@@ -131,11 +131,11 @@
                   ></i>
                 </div>
               </div>
-              <p class="nouveau">Nouveau</p>
             </a>
+            <p class="nouveau">Nouveau</p>
           </article>
           <article class="card_restaurant">
-            <a href="/resto-francaise.html">
+            <a href="./resto-francaise.html">
               <img
                 src="dart-sass/sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="restaurant"
@@ -159,7 +159,7 @@
             </a>
           </article>
           <article class="card_restaurant">
-            <a href="/resto-delice.html">
+            <a href="./resto-delice.html">
               <img
                 src="dart-sass/sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="restaurant"
