--- a/resto-delice.html
+++ b/resto-delice.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <!--Header-->
     <header class="header-menu">
       <div class="arrow">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
@@ -28,6 +29,7 @@
           alt="francaise"
         />
       </div>
+      <!--Menu Restaurant-->
       <section class="resto">
         <div class="resto_titre">
           <h2 class="resto_titre_nom">Le délice des sens</h2>
@@ -42,6 +44,7 @@
             ></i>
           </div>
         </div>
+        <!--Entrées-->
         <article class="resto_menu">
           <h3>Entrées</h3>
           <div class="resto_menu_choix">
@@ -81,6 +84,7 @@
             </div>
           </div>
         </article>
+        <!--Plats-->
         <article class="resto_menu">
           <div class="resto_menu_titre">
             <h3>Plats</h3>
@@ -122,6 +126,7 @@
             </div>
           </div>
         </article>
+        <!--Desserts-->
         <article class="resto_menu">
           <div class="resto_menu_titre">
             <h3>Desserts</h3>
@@ -164,12 +169,14 @@
           </div>
         </article>
       </section>
+      <!--Bouton Commander-->
       <div class="commander">
         <a href="index.html">
           <button class="btn" type="submit">Commander</button>
         </a>
       </div>
     </main>
+    <!--Footer-->
     <footer>
       <a href="index.html">
         <h3>ohmyfood</h3>
