Dernières modifications et corrections des erreurs

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
           <p>
             Découvrez des restaurants d'exception, séléctionnés par nos soins
           </p>
-          <a href="#restaurants">
-            <button class="btn" type="submit">Explorer nos restaurants</button>
-          </a>
+          <a href="#restaurants" class="btn"> Explorer nos restaurants </a>
         </section>
         <!--Fonctionnement-->
         <section class="fonctionnement">
@@ -193,14 +191,14 @@
       <div class="box_footer">
         <ul>
           <li>
-            <a href=""
-              ><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a
-            >
+            <a href="">
+              <i class="fa-solid fa-utensils"></i> Proposer un restaurant
+            </a>
           </li>
           <li>
-            <a href=""
-              ><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a
-            >
+            <a href="">
+              <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
+            </a>
           </li>
           <li>
             <a href=""> Mentions légales </a>
