--- a/resto-francaise.html
+++ b/resto-francaise.html
@@ -171,9 +171,7 @@
       </section>
       <!--Bouton Commander-->
       <div class="commander">
-        <a href="index.html">
-          <button class="btn" type="submit">Commander</button>
-        </a>
+        <a href="index.html" class="btn"> Commander </a>
       </div>
     </main>
     <!--Footer-->
@@ -184,14 +182,14 @@
       <div class="box_footer">
         <ul>
           <li>
-            <a href=""
-              ><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a
-            >
+            <a href="">
+              <i class="fa-solid fa-utensils"></i> Proposer un restaurant
+            </a>
           </li>
           <li>
-            <a href=""
-              ><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a
-            >
+            <a href="">
+              <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
+            </a>
           </li>
           <li>
             <a href=""> Mentions légales </a>
